@@ -13,7 +13,6 @@ import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.refactoring.rename.inplace.InplaceRefactoring;
 import com.intellij.ui.JBColor;
-import com.intellij.util.containers.FList;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -64,10 +63,10 @@ final class LookupPreview {
         return itemText;
       }
 
-      FList<TextRange> fragments = LookupCellRenderer.getMatchingFragments(prefix, itemText);
+      List<TextRange> fragments = LookupCellRenderer.getMatchingFragmentList(prefix, itemText);
       if (fragments != null && !fragments.isEmpty()) {
         List<TextRange> list = new ArrayList<>(fragments);
-        return itemText.substring(list.get(list.size() - 1).getEndOffset());
+        return itemText.substring(list.getLast().getEndOffset());
       }
     }
     return "";
